[package]
name = "trajgen"
version = "0.1.1"
authors = ["Tristen Georgiou <tristen.georgiou@gmail.com>"]
edition = "2018"
description = "Minimum trajectory generator"
readme = "README.md"
repository = "https://github.com/tristeng/trajgen/"
license = "MIT"
keywords = ["trajectory", "planning"]

[dependencies]
log = "0.4"
nalgebra = "0.29"

[dev-dependencies]
assert = "0.7.4"